helm-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: ns-26
spec:
  ingressClassName: nginx
  rules:
  - host: name-26.hse.ru
    http:
      paths:
      - backend:
          service:
            name: server
            port:
              number: 5000
        path: /
        pathType: Prefix
